# FastAPI-ReactJS-SmartTrade-11.01

./: .gitignore  README.md  package-lock.json
Back/: .env  .gitignore  alembic.ini  main.py  pyproject.toml
Back/app/: base.py  create_tables.py  crud_repository.py  database.py  local_settings.py  main.py  models.py  populate_db.py  repository.py
Back/app/alembic/: env.py
Back/app/api/: deps.py  main.py
Back/app/core/: enums.py  security.py
Back/app/crud/: address.py  buyer_owns_card.py  card.py  product_line.py  refund_product.py
Back/app/models/: address.py  admin.py  book.py  buyer.py  buyer_address.py  buyer_owns_card.py  card.py  category.py  clothes.py  electrodomestics.py  electronics.py  food.py  game.py  house_utilities.py  image.py  in_shopping_cart.py  in_wish_list.py  order.py  product.py  product_line.py  product_seller.py  refund_product.py  seller.py  seller_product.py  user.py
Back/app/repositories/: address.py  buyer.py  buyer_owns_card.py  card.py  category.py  image.py  in_shopping_cart.py  in_wish_list.py  order.py  product.py  product_line.py  product_seller.py  refund_product.py  seller.py  seller_product.py
Back/app/schemas/: address.py  book.py  buyer.py  buyer_address.py  buyer_owns_card.py  card.py  category.py  clothes.py  electrodomestics.py  electronics.py  food.py  game.py  house_utilities.py  image.py  in_shopping_cart.py  in_wish_list.py  order.py  product.py  product_line.py  product_seller.py  refund_product.py  seller.py  seller_product.py  token.py  user.py
Back/app/service/: AddressService.py  BuyerService.py  CardService.py  CategoryService.py  ImageService.py  InShoppingCartService.py  InWishListService.py  OrderService.py  ProductLineService.py  ProductService.py  RefundProductService.py  SellerProductService.py  SellerService.py  address.py  buyer.py  card.py  category.py  image.py  in_shopping_cart.py  in_wish_list.py  order.py  product.py  product_line.py  refund_product.py  (+3 more)
Back/clases/: Item.py
Back/models/: address.py  buyer_owns_card.py  card.py  order.py  product_line.py  product_seller.py  refund_product.py
Back/tests/: conftest.py  test_buyer.py  test_seller.py  test_user.py
(+221 files in other folders)
