[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["VoperAD <victoraguiarrodrigues@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.28"
sqlalchemy-utils = "^0.41.1"
pydantic = "^2.6.3"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
python-dotenv = "^1.0.1"
email-validator = "^2.1.1"
pydantic-extra-types = "^2.6.0"
pycountry = "^23.12.11"
faker = "^24.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"

[tool.ruff.lint.per-file-ignores]
"database.py" = ["E402", "F401"]

[tool.ruff.lint]
ignore = ["E712"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
